--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -1,17 +1,4 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: mysql-pv
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: manual
-  hostPath:
-    path: "/mnt/data"
-    type: DirectoryOrCreate
----
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -20,7 +7,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: manual
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
 
