--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -33,7 +33,7 @@ spec:
         image: mysql:8.0
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: my-secret-pw
+          value: root
         ports:
         - containerPort: 3306
           name: mysql
