--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -34,11 +34,13 @@ spec:
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: root
-        - name: MYSQL_HOST
-          valueFrom:
-            configMapKeyRef:
-              key: hostname
-              name: mysql-cm
+        - name: MYSQL_ROOT_HOST
+          value: "%"
+        # - name: MYSQL_HOST
+        #   valueFrom:
+        #     configMapKeyRef:
+        #       key: hostname
+        #       name: mysql-cm
         ports:
         - containerPort: 3306
           name: mysql
