--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -1,16 +1,16 @@
 
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pvc
-spec:
-  resources:
-    requests:
-      storage: 1Gi
-  storageClassName: fast-storageclass
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteOnce
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: mysql-pvc
+# spec:
+#   resources:
+#     requests:
+#       storage: 1Gi
+#   storageClassName: fast-storageclass
+#   volumeMode: Filesystem
+#   accessModes:
+#     - ReadWriteOnce
 
 
 ---
@@ -51,15 +51,28 @@ spec:
         volumeMounts:
         - name: mysql-initdb
           mountPath: /docker-entrypoint-initdb.d
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
+        # - name: mysql-persistent-storage
+        #   mountPath: /var/lib/mysql
       volumes:
         - name: mysql-initdb
           configMap:
             name: mysql-initdb-cm
-        - name: mysql-persistent-storage
-          persistentVolumeClaim:
-            claimName: mysql-pvc
+        # - name: mysql-persistent-storage
+        #   persistentVolumeClaim:
+        #     claimName: mysql-pvc
+  volumeClaimTemplates:
+  - metadata:
+      name: mysql
+      labels:
+        app: mysql
+    spec:
+      storageClassName: fast-storageclass
+      volumeMode: Filesystem
+      accessModes:
+      - ReadWriteOnce
+      resources:
+        requests:
+          storage: 1Gi
 
 ---
 
